--- a/3.html
+++ b/3.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>WEB1 - JavaScript </title>
-<meta charset="utf-8">
+    <title>WEB1 - JavaScript </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./CSS/gridtest.css">
+
 </head>
+
 <body>
-<h1><a href="index.html">WEB</a></h1>
-<ol>
-<li><a href="1.html">HTML</a></li>
-<li><a href="2.html">CSS</a></li>
-<li><a href="3.html">JavaScript</a></li>
-</ol>
-<h2>JavaScript 무엇인가?</h2>
-<p style="margin-top: 40px;">
-JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of 
-the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites 
-use JavaScript on the client side for web page behavior,[12] often incorporating third-party 
-libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
-</p>
+    <h1><a href="index.html">WEB</a></h1>
+
+    <div id="grid">
+
+        <ol>
+            <li><a href="1.html" class="saw" id="active">HTML</a></li>
+            <li><a href="2.html" class="saw"> CSS</a></li>
+            <li><a href="3.html" class="saw">JavaScript</a></li>
+            <li><a href="4.html" class="saw">사진첩</a></li>
+        </ol>
+
+        <div>
+            <h2>JavaScript란 무엇인가?</h2>
+            <p style="margin-top: 40px;">
+                JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of
+                the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites
+                use JavaScript on the client side for web page behavior,[12] often incorporating third-party
+                libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
