--- a/index.html
+++ b/index.html
@@ -8,35 +8,45 @@
 </head>
 
 <body>
-   
+
     <h1>Yeonsu test landing page </h1>
     <h1><a href="index.html">WEB</a></h1>
 
     <div id="grid">
         <ol>
-        <li><a href="1.html" class= "saw" id="active" >HTML</a></li>
-        <li><a href="2.html" class= "saw" > CSS</a></li>
-        <li><a href="3.html" class= "saw" >JavaScript</a></li>
-        <li><a href="4.html" class= "saw" >사진첩</a></li>
-    </ol>
-<div style="margin-left: 40px;"  >
-    <h2>WEB이란 무엇인가?</h2>
-    
-    <p style="margin-top: 40px;" >
-   
-        The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1] It was
-        originally a hypertext document management system[2] accessed over the Internet.[3]
-        The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by
-        a software application called a web browser, and are published by a software application called a web server.
-        Web resources may be any type of downloaded media, but web pages are hypertext documents formatted in
-        Hypertext Markup Language (HTML). Special HTML syntax displays embedded hyperlinks with URLs, which permits
-        users
-        to navigate to other web resources. In addition to text, web pages may contain references to images, video,
-        audio, and
-        software components, which are either displayed or internally executed in the user's web browser to render pages
-        or
-        streams of multimedia conten
-    </p></div></div>
+            <li><a href="1.html" class="saw" id="active">HTML</a></li>
+            <li><a href="2.html" class="saw"> CSS</a></li>
+            <li><a href="3.html" class="saw">JavaScript</a></li>
+            <li><a href="4.html" class="saw">사진첩</a></li>
+        </ol>
+        <div style="margin-left: 40px;">
+            <div id="article">
+                <h2>WEB이란 무엇인가?</h2>
+
+                <p style="margin-top: 40px;">
+
+                    The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1]
+                    It was
+                    originally a hypertext document management system[2] accessed over the Internet.[3]
+                    The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed
+                    by users by
+                    a software application called a web browser, and are published by a software application called a
+                    web server.
+                    Web resources may be any type of downloaded media, but web pages are hypertext documents formatted
+                    in
+                    Hypertext Markup Language (HTML). Special HTML syntax displays embedded hyperlinks with URLs, which
+                    permits
+                    users
+                    to navigate to other web resources. In addition to text, web pages may contain references to images,
+                    video,
+                    audio, and
+                    software components, which are either displayed or internally executed in the user's web browser to
+                    render pages
+                    or
+                    streams of multimedia conten
+                </p>
+            </div>
+        </div>
 </body>
 
 </html>
