--- a/1.html
+++ b/1.html
@@ -22,7 +22,7 @@
         multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for
         the
         appearance of the document.</p>
-      <img src="coding.jpg" width="100%">
+      <img src="1.jpg" width="50px" >
       <p style="margin-top: 40px;">
         HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as
         interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents
