--- a/3.html
+++ b/3.html
@@ -20,7 +20,7 @@
             <li><a href="4.html" class="saw">사진첩</a></li>
         </ol>
 
-        <div>
+        <div style="margin-left: 30px;">
             <h2>JavaScript란 무엇인가?</h2>
             <p style="margin-top: 40px;">
                 JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of
