--- a/1.html
+++ b/1.html
@@ -22,8 +22,7 @@
         multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for
         the
         appearance of the document.</p>
-      <img src="1.jpg" width="50px" >
-      <p style="margin-top: 40px;">
+      <p style="margin-top: 10px;">
         HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as
         interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents
         by
@@ -31,6 +30,7 @@
         elements are
         delineated by tags, written using angle brackets.
       </p>
+      <img id="iii" src="1.jpg" width="50%">
     </div>
   </div>
 </body>
