--- a/1.html
+++ b/1.html
@@ -30,7 +30,7 @@
         elements are
         delineated by tags, written using angle brackets.
       </p>
-      <img id="iii" src="1.jpg" width="50%">
+      <img id="iii" src="1.jpg">
     </div>
   </div>
 </body>
