--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 <body>
 
+    <input type="button" value="night" onclick="
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+    ">
+
+    <input type="button" value="day" onclick="
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color = 'black';
+    ">
+
+<input id="s" type="text" onkeydown="alert('key down')">
+<input  type="button" value="clear" onclick="s.value = null" >
     <h1>Yeonsu test landing page </h1>
     <h1><a href="index.html">WEB</a></h1>
 
