--- a/1.html
+++ b/1.html
@@ -6,6 +6,11 @@
 <body>
 
   <h1><a href="index.html">WEB</a></h1>
+
+  <input id="s" type="text" onkeydown="alert('key down')">
+  <input type="button" value="clear" onclick="s.value = null" >
+
+
   <div id="grid">
     <ol>
       <li><a href="1.html">HTML</a></li>
