--- a/1.html
+++ b/1.html
@@ -4,7 +4,10 @@
 </head>
 
 <body>
-
+  <input id="night_day" type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
+  
   <h1><a href="index.html">WEB</a></h1>
 
   <input id="s" type="text" onkeydown="alert('key down')">
