--- a/2.html
+++ b/2.html
@@ -4,6 +4,49 @@
 </head>
 
 <body>
+  <input id="night_day" type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
+  <!-- <input id="night_day" type="button" value="night" onclick="
+  if(document.querySelector('#night_day').value === 'night') {
+      document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color= 'white';
+    document.querySelector('#night_day').value = 'day';   
+  } else {
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color= 'black';
+    document.querySelector('#night_day').value = 'night';   
+  }
+  "> -->
+
+  <input id="night_day" type="button" value="night" onclick="
+   var target = document.querySelector('body');
+    if(this.value === 'night') {
+       target.style.backgroundColor = 'black';
+       target.style.color= 'white';
+       this.value = 'day';   
+       var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length) {
+            alist[i].style.color = 'powderblue';
+            console.log(alist[i]);
+            i = i + 1 ;
+        }
+       
+  } else {
+    target.style.backgroundColor = 'white';
+    target.style.color= 'black';
+    this.value = 'night';   
+    var alist = document.querySelectorAll('a');
+        var i = 0;
+        for (i=0; i < alist.length;i++) {
+            alist[i].style.color = 'blue';
+            console.log(alist[i]);
+            // i = i + 1 ;
+        }
+  }
+  ">
+
 
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
