--- a/2.html
+++ b/2.html
@@ -1,6 +1,7 @@
 <title>WEB1 - CSS </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/gridtest.css">
+<script src="./js/color.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     document.querySelector('#night_day').value = 'night';   
   }
   "> -->
-
+<!-- 
   <input id="night_day" type="button" value="night" onclick="
    var target = document.querySelector('body');
     if(this.value === 'night') {
@@ -45,7 +46,7 @@
             // i = i + 1 ;
         }
   }
-  ">
+  "> -->
 
 
   <h1><a href="index.html">WEB</a></h1>
