--- a/1.html
+++ b/1.html
@@ -1,17 +1,17 @@
 <title>WEB1 - HTML </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/gridtest.css">
+<script src="./js/color.js"></script>
 </head>
 
 <body>
   <input id="night_day" type="button" value="night" onclick="
   nightDayHandler(this);
   ">
-  
+
   <h1><a href="index.html">WEB</a></h1>
 
-  <input id="s" type="text" onkeydown="alert('key down')">
-  <input type="button" value="clear" onclick="s.value = null" >
+
 
 
   <div id="grid">
