--- a/3.html
+++ b/3.html
@@ -5,6 +5,7 @@
     <title>WEB1 - JavaScript </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./CSS/gridtest.css">
+    <script src="./js/color.js"></script>
 
 </head>
 
@@ -13,7 +14,7 @@
     <input id="night_day" type="button" value="night" onclick="
     nightDayHandler(this);
     ">
-    <script>
+    <!-- <script>
         function BodySetColor(color) {
             document.querySelector('body').style.color = color;
         }
@@ -30,7 +31,7 @@
                 console.log(alist[i]);
                 i = i + 1;
             }
-        }
+        } -->
 
         // 1) 함수의 정의 부분. 
         function nightDayHandler(self) {
