--- a/4.html
+++ b/4.html
@@ -5,6 +5,7 @@
   <title>WEB1 - JavaScript </title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./css/gridtest.css">
+  <script src="./js/color.js"></script>
 </head>
 
 <body>
@@ -15,23 +16,23 @@
   <!-- 작업순서1 -->
 
   <!-- 작업순서3 -->
-  <script>
-    var Body = {
+  <!-- <script> -->
+    <!-- // var Body = {
       // Body 라는 객체이고, 속성으로 
       // 속성 키 : setColor , 값 : 함수 정의 : function(color) { ~
       // 속성 키 : setBackgroundColor , 값 : 함수 정의 : function(color) { ~
-      setColor: function (color) {
-        document.querySelector('body').style.color = color;
-      },
-      setBackgroundColor: function (color) {
-        document.querySelector('body').style.backgroundColor = color;
-      }
-    }
-  </script>
+    //   setColor: function (color) {
+    //     document.querySelector('body').style.color = color;
+    //   },
+    //   setBackgroundColor: function (color) {
+    //     document.querySelector('body').style.backgroundColor = color;
+    //   }
+    // } -->
+  <!-- </script> -->
   <!-- 작업순서3 -->
 
   <!-- 작업순서7 -->
-  <script>
+  <!-- <script>
     var Links = {
       setColor: function (color) {
         var alist = document.querySelectorAll('a');
@@ -42,13 +43,13 @@
         }
       }
     } 
-  </script>
+  </script> -->
   <!-- 작업순서7 -->
 
 
   <!-- 작업순서2 -->
-  <script>
-    // 작업순서4 : 사용 안하는 함수 주석.
+  <!-- <script> -->
+    <!-- // 작업순서4 : 사용 안하는 함수 주석.
     // 이 함수들은 Body 객체 안에 넣어서 사용함. 
     // function BodySetColor(color) {
     //   document.querySelector('body').style.color = color;
@@ -68,53 +69,53 @@
     //   }
     // }
 
-    function nightDayHandler(self) {
-      if (self.value === 'night') {
+    // function nightDayHandler(self) {
+    //   if (self.value === 'night') {
         // 작업 순서 5, 사용안하는 함수 주석
         // BodySetBackgroudColor('black');
 
         // 작업 순서 6, 객체 버전으로 속성의 함수 이용하기. 
         // 객체 속성의 함수 버전으로 사용해보기. 
-        Body.setBackgroundColor('black');
+        // Body.setBackgroundColor('black');
 
         // 작업 순서 5, 사용안하는 함수 주석
         // BodySetColor('white');
 
         // 작업 순서 6, 객체 버전으로 속성의 함수 이용하기. 
         // 객체 속성의 함수 버전으로 사용해보기. 
-        Body.setColor('white')
+        // Body.setColor('white')
 
-        self.value = 'day'
+        // self.value = 'day'
         //작업 순서 8, 기존 함수 버전 주석
         // LinksSetColor('powderblue');
 
         // 작업 순서 9, 객체 버전으로 변경. 
-        Links.setColor('powderblue')
+      //   Links.setColor('powderblue')
 
-      } else {
+      // } else {
         // 작업 순서 5, 사용안하는 함수 주석
         // BodySetBackgroudColor('white');
 
         // 작업 순서 6, 객체 버전으로 속성의 함수 이용하기. 
         // 객체 속성의 함수 버전으로 사용해보기. 
-        Body.setBackgroundColor('white')
+        // Body.setBackgroundColor('white')
 
         // 작업 순서 5, 사용안하는 함수 주석
         // BodySetColor('black');
         // 작업 순서 6, 객체 버전으로 속성의 함수 이용하기. 
         // 객체 속성의 함수 버전으로 사용해보기. 
-        Body.setColor('black')
+        // Body.setColor('black')
 
-        self.value = 'night'
+        // self.value = 'night'
         //작업 순서 8, 기존 함수 버전 주석
         // LinksSetColor('blue');
 
         // 작업 순서 9, 객체 버전으로 변경. 
-        Links.setColor('blue')
+  //       Links.setColor('blue')
 
-      }
-    }
-  </script>
+  //     }
+  //   } -->
+ <!-- </script> -->
   <!-- 작업순서2 -->
 
   <h1><a href="index.html">WEB</a></h1>
