--- a/3.html
+++ b/3.html
@@ -32,7 +32,7 @@
                 i = i + 1;
             }
         } -->
-
+<!-- 
         // 1) 함수의 정의 부분. 
         function nightDayHandler(self) {
             // var target = document.querySelector('body');
@@ -61,7 +61,7 @@
             }
         }
 
-    </script>
+    </script> -->
     <h1><a href="index.html">WEB</a></h1>
 
     <div id="grid">
