--- a/2.html
+++ b/2.html
@@ -2,6 +2,8 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/gridtest.css">
 <script src="./js/color.js"></script>
+<!-- <script src="./js/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
