--- a/3.html
+++ b/3.html
@@ -6,11 +6,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./CSS/gridtest.css">
     <script src="./js/color.js"></script>
+    <!-- <script src="./js/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 </head>
 
 <body>
-
     <input id="night_day" type="button" value="night" onclick="
     nightDayHandler(this);
     ">
