--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
 
 <head>
-    <title>WEB1 - WEB </title>
+    <title>WEB </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./CSS/gridtest.css">
     <!-- 자바스크립트 파일 분리 -->
     <script src="./js/color.js"></script>
+
+
+
+    <!-- JQuery작업순서1 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- <script src="./js/jquery.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
