--- a/3.html
+++ b/3.html
@@ -9,12 +9,50 @@
     <!-- <script src="./js/jquery.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
-    <input id="night_day" type="button" value="night" onclick="
+
+    <header class="p-3 text-bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="1.html" class="nav-link px-2 text-white">HTML</a></li>
+                    <li><a href="2.html" class="nav-link px-2 text-white">CSS</a></li>
+                    <li><a href="3.html" class="nav-link px-2 text-white">JS</a></li>
+                    <li><a href="4.html" class="nav-link px-2 text-white">Pic</a></li>
+                </ul>
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+                        aria-label="Search">
+                </form>
+
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-light me-2">Login</button>
+                    <button type="button" class="btn btn-warning">Sign-up</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- <input id="night_day" type="button" value="night" onclick="
     nightDayHandler(this);
-    ">
+    "> -->
     <!-- <script>
         function BodySetColor(color) {
             document.querySelector('body').style.color = color;
@@ -63,7 +101,9 @@
         }
 
     </script> -->
-    <h1><a href="index.html">WEB</a></h1>
+    <!-- <h1><a href="index.html">WEB</a></h1> -->
+    <h1><br></h1>
+
 
     <div id="grid">
 
@@ -74,8 +114,12 @@
             <li><a href="4.html" class="saw">사진첩</a></li>
         </ol>
 
-        <div style="margin-left: 30px;">
+        <div style="margin-left: 50px;">
             <h2>JavaScript란 무엇인가?</h2>
+
+            <input class="btn btn-primary rounded-pill px-3" id="night_day" type="button" value="night"
+            onclick="nightDayHandler(this);">
+
             <p style="margin-top: 40px;">
                 JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of
                 the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites
@@ -84,6 +128,17 @@
             </p>
         </div>
     </div>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+      </footer>
+
 </body>
 
 </html>
