--- a/index.html
+++ b/index.html
@@ -23,9 +23,40 @@
 </head>
 
 <body>
-    <input id="night_day" type="button" value="night" onclick="
+    <!-- <input class="btn btn-primary rounded-pill px-3" id="night_day" type="button" value="night" onclick="
     nightDayHandler(this);
-    ">
+    "> -->
+    <!-- <button class="btn btn-primary rounded-pill px-3" type="button">Primary</button> -->
+
+    <header class="p-3 text-bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="1.html" class="nav-link px-2 text-white">HTML</a></li>
+                    <li><a href="2.html" class="nav-link px-2 text-white">CSS</a></li>
+                    <li><a href="3.html" class="nav-link px-2 text-white">JS</a></li>
+                    <li><a href="4.html" class="nav-link px-2 text-white">Pic</a></li>
+                </ul>
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+                        aria-label="Search">
+                </form>
+
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-light me-2">Login</button>
+                    <button type="button" class="btn btn-warning">Sign-up</button>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- <input type="button" value="night" onclick="
     document.querySelector('body').style.backgroundColor = 'black';
@@ -39,7 +70,11 @@
 
 <input id="s" type="text" onkeydown="alert('key down')">
 <input type="button" value="clear" onclick="s.value = null" > -->
-    <h1><a href="index.html">WEB</a></h1>
+
+    <!-- <h1><a href="index.html">WEB</a></h1> -->
+    
+    <h1><br></h1>
+
 
     <div id="grid">
         <ol>
@@ -48,8 +83,12 @@
             <li><a href="3.html" class="saw">JavaScript</a></li>
             <li><a href="4.html" class="saw">사진첩</a></li>
         </ol>
-        <div style="margin-left: 30px;">
+        <div style="margin-left: 50px;">
             <h2>WEB이란 무엇인가?</h2>
+
+            <input class="btn btn-primary rounded-pill px-3" id="night_day" type="button" value="night"
+                onclick="nightDayHandler(this);">
+
             <p style="margin-top: 40px;">
 
                 The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1]
@@ -74,6 +113,16 @@
             </p>
         </div>
     </div>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+      </footer>
 </body>
 
 </html>
