--- a/4.html
+++ b/4.html
@@ -206,11 +206,11 @@
   </div>
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="1.html" class="nav-link px-2 text-body-secondary">HTML</a></li>
+      <li class="nav-item"><a href="2.html" class="nav-link px-2 text-body-secondary">CSS</a></li>
+      <li class="nav-item"><a href="3.html" class="nav-link px-2 text-body-secondary">JS</a></li>
+      <li class="nav-item"><a href="4.html" class="nav-link px-2 text-body-secondary">Pic</a></li>
     </ul>
     <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
   </footer>
