--- a/1.html
+++ b/1.html
@@ -30,6 +30,7 @@ crossorigin="anonymous"></script>
                 <li><a href="2.html" class="nav-link px-2 text-white">CSS</a></li>
                 <li><a href="3.html" class="nav-link px-2 text-white">JS</a></li>
                 <li><a href="4.html" class="nav-link px-2 text-white">Pic</a></li>
+                <li><a href="5.html" class="nav-link px-2 text-white">YS.Design</a></li>
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
