--- a/7.html
+++ b/7.html
@@ -57,9 +57,10 @@
                 </a>
                 <H2 style="text-align: left;">YS.Design</H2>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="5.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
                     <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
+                
 
                 </ul>
 
@@ -109,9 +110,10 @@
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="5.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
             <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
+            
 
         </ul>
         <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
