--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <use xlink:href="#bootstrap"></use>
                     </svg>
                 </a>
-
+                <h2 class="main">YS.Design</h2>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
