--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
                 </a>
                 <H2 style="text-align: left;">YS.Design</H2>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="5.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
                     <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
 
@@ -71,7 +71,7 @@
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="5.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
             <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
 
