--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
                     <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
+                    <li><a href="8.html" class="nav-link px-2 text-white">상담 예약</a></li>
 
                 </ul>
 
@@ -120,6 +121,7 @@
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
             <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
+            <li class="nav-item"><a href="8.html" class="nav-link px-2 text-body-secondary">상담예약</a></li>
 
         </ul>
         <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
