--- a/7.html
+++ b/7.html
@@ -61,6 +61,7 @@
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
                     <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
                     <li><a href="8.html" class="nav-link px-2 text-white">상담 예약</a></li>
+                    <li><a href="9.html" class="nav-link px-2 text-white">카카오 오븐</a></li>
                 
 
                 </ul>
