--- a/6.html
+++ b/6.html
@@ -63,6 +63,7 @@
                     <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
                     <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
                     <li><a href="8.html" class="nav-link px-2 text-white">상담 예약</a></li>
+                    <li><a href="9.html" class="nav-link px-2 text-white">카카오 오븐</a></li>
                    
 
                 </ul>
@@ -172,6 +173,7 @@
             <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
             <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
             <li class="nav-item"><a href="8.html" class="nav-link px-2 text-body-secondary">상담예약</a></li>
+            
 
         </ul>
         <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
