--- a/9.html
+++ b/9.html
@@ -6,9 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>카카오 오븐</title>
     <link rel="stylesheet" href="./CSS/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+
+
 </head>
 
 <body>
+
+    
+    <header class="p-3 text-bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+                <h2 class="main">YS.Design</h2>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
+                    <li><a href="6.html" class="nav-link px-2 text-white">About Us</a></li>
+                    <li><a href="7.html" class="nav-link px-2 text-white">Projects</a></li>
+                    <li><a href="8.html" class="nav-link px-2 text-white">상담 예약</a></li>
+                    <li><a href="10.html" class="nav-link px-2 text-white">상담후기</a></li>
+                    <li><a href="9.html" class="nav-link px-2 text-white">카카오 오븐</a></li>
+
+                </ul>
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+                        aria-label="Search">
+                </form>
+
+                <div class="text-end">
+                    <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+                    <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
     <div class="oven">
         <img style= 'width: 1200px' src="01.jpg">
         <br>
@@ -23,6 +67,19 @@
         <img style= 'width: 300px' src="06.jpg">
 
     </div>
+
+
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
+            <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
+            <li class="nav-item"><a href="8.html" class="nav-link px-2 text-body-secondary">상담예약</a></li>
+
+        </ul>
+        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+    </footer>
+
 
 </body>
 
