--- a/10.html
+++ b/10.html
@@ -1,6 +1,7 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="./CSS/style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 
 </head>
+
 <body>
     <header class="p-3 text-bg-dark">
         <div class="container">
@@ -50,34 +52,59 @@
         <div class="container02">
             <h2>인테리어 상담 후기</h2>
 
-            <button type="submit">글쓰기</button>
+            <button class="write" type="submit">글쓰기</button>
+            <br>
+            <br>
             <div class="review">
                 <h3>상담 후기 제목</h3>
                 <p>상담 내용이 들어가는 부분입니다. 여기에 상세한 내용을 입력할 수 있습니다.</p>
                 <span class="author">작성자: 홍길동</span>
+                <div class="buttons">
+                    <button class="edit-button">수정하기</button>
+                    <button class="delete-button">삭제하기</button>
+                </div>
             </div>
+
             <div class="review">
                 <h3>상담 후기 제목</h3>
                 <p>상담 내용이 들어가는 부분입니다. 여기에 상세한 내용을 입력할 수 있습니다.</p>
-                <span class="author">작성자: 홍길순</span>
+                <span class="author">작성자: 홍길동</span>
+                <div class="buttons">
+                    <button class="edit-button">수정하기</button>
+                    <button class="delete-button">삭제하기</button>
+                </div>
             </div>
+
             <div class="review">
                 <h3>상담 후기 제목</h3>
                 <p>상담 내용이 들어가는 부분입니다. 여기에 상세한 내용을 입력할 수 있습니다.</p>
-                <span class="author">작성자: 홍길자</span>
+                <span class="author">작성자: 홍길동</span>
+                <div class="buttons">
+                    <button class="edit-button">수정하기</button>
+                    <button class="delete-button">삭제하기</button>
+                </div>
             </div>
+
             <div class="review">
                 <h3>상담 후기 제목</h3>
                 <p>상담 내용이 들어가는 부분입니다. 여기에 상세한 내용을 입력할 수 있습니다.</p>
-                <span class="author">작성자: 홍길우</span>
+                <span class="author">작성자: 홍길동</span>
+                <div class="buttons">
+                    <button class="edit-button">수정하기</button>
+                    <button class="delete-button">삭제하기</button>
+                </div>
             </div>
+
             <div class="review">
                 <h3>상담 후기 제목</h3>
                 <p>상담 내용이 들어가는 부분입니다. 여기에 상세한 내용을 입력할 수 있습니다.</p>
-                <span class="author">작성자: 홍길숙</span>
+                <span class="author">작성자: 홍길동</span>
+                <div class="buttons">
+                    <button class="edit-button">수정하기</button>
+                    <button class="delete-button">삭제하기</button>
+                </div>
             </div>
-            <!-- 추가적인 상담 후기가 필요한 경우 위의 review 블록을 복사하여 붙여넣으세요 -->
-        </div>
+
     </main>
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -85,7 +112,7 @@
             <li class="nav-item"><a href="6.html" class="nav-link px-2 text-body-secondary">About Us</a></li>
             <li class="nav-item"><a href="7.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
             <li class="nav-item"><a href="8.html" class="nav-link px-2 text-body-secondary">상담예약</a></li>
-            
+
 
         </ul>
         <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
@@ -94,4 +121,7 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
+
+
